--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -37,7 +37,9 @@ jobs:
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        make
+        for file in *.c; do
+          gcc -o "${file%.c}" "$file"
+        done
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
